<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:gravity="center_vertical"
    android:weightSum="1"
    android:baselineAligned="false"
    android:textStyle="italic"
    android:background="@color/colorPrimaryDark"
    android:animationCache="false">
    <TextView
        android:textSize="50sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/levelTV"
        android:layout_gravity="center_horizontal"
        android:background="@color/colorPrimaryDark"
        android:textColor="@color/colorAccent"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:layout_weight="0.09" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_weight="0.12" />

    <Button
            android:id="@+id/start_butt_id"
            android:text="@string/new_game"
            android:textSize="30sp"
            android:layout_width="270dp"
            android:layout_height="60dp"
        android:onClick="startGame"
        android:layout_gravity="center_horizontal"
        android:background="@color/colorPrimary"
        android:textColor="@color/colorAccent"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_weight="0.12" />
    <Button
        android:id="@+id/level_butt_id"
        android:text="@string/level"
        android:textSize="30sp"
        android:layout_width="270dp"
        android:layout_height="60dp"
        android:onClick="levels"
        android:textColor="@color/colorAccent"
        android:layout_gravity="center_horizontal"
        android:background="@color/colorPrimary" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_weight="0.12" />

    <Button
            android:id="@+id/reset_btn_id"
            android:layout_below="@id/level_butt_id"
            android:text="@string/reset_game"
        android:textColor="@color/colorAccent"
            android:textSize="30sp"
            android:layout_width="270dp"
            android:layout_height="60dp"
        android:onClick="resetGame"
        android:layout_gravity="center_horizontal"
        android:background="#f49e9e" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_weight="0.12" />

    <Button
        android:id="@+id/about_butt_id"
        android:layout_below="@id/reset_btn_id"
        android:text="@string/about"
        android:textColor="@color/colorAccent"
        android:textSize="30sp"
        android:layout_width="270dp"
        android:layout_height="60dp"
        android:onClick="startGame"
        android:layout_gravity="center_horizontal"
        android:background="@color/colorPrimary" />

</LinearLayout>
